💄 dropdown z-index fix

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -7,6 +7,7 @@
     &__content {
         display: none;
         position: absolute;
+        z-index: 1100;
         min-width: map.get(config.$scale, 800);
         background-color: var(--color-bg);
         box-shadow: 0px 8px 16px 0px var(--color-shadow);
